<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Boxee Remote</string>
	<string name="host_key">host</string>
	<string name="port_key">port</string>
	<string name="settings">Settings</string>
	<string name="host_title">Host</string>
	<string name="host_summary">Hostname of the server. Leave blank for
		Boxee autodiscovery.</string>
	<string name="port_title">Port</string>
	<string name="port_summary">Port of the boxee service, 8800 by default.
		Unused in autodiscovery.</string>
	<string name="no_wifi">Wifi unavailable, cannot access local boxee
		host. Connect to wifi or disable this check in settings</string>
	<string name="require_wifi_key">require_wifi</string>
	<string name="require_wifi_title">Require Wifi Connection</string>
	<string name="require_wifi_yes">Wifi must be active</string>
	<string name="require_wifi_no">Allow connection over mobile internet</string>
	<string name="hide_arrows_yes">Hide navigation (use trackball)</string>
	<string name="hide_arrows_no">Reveal navigation</string>
	<string name="hide_arrows">hide_arrows</string>
	<string name="hide_arrows_title">Hide Navigation Graphics</string>
	<string name="scan">Scan for Boxees</string>
	<string name="help">Help</string>
	<string name="none_found">Found no Boxee servers</string>
	<string name="discovered_name_key">discovered_name</string>


	<string name="discovered_name">Name of discovered server</string>
	<string name="discovered_summary">To set, run a scan from the main menu.</string>
	<string name="timeout_key">timeout</string>
	<string name="timeout_summary">Timeout for HTTP requests in milliseconds</string>
<string name="timeout_title">Timeout</string>
<string name="advanced_key">advanced</string>
<string name="advanced_on">Show advanced options</string>
<string name="advanced_off">Hide advanced options</string>
<string name="advanced_title">Advanced Options</string>
<string name="user_key">user</string>
<string name="user_title">User</string>
<string name="user_summary">Webserver username, default "xbox"</string>
<string name="password_key">password</string>
<string name="password_title">Password</string>

<string name="password_summary">Only needed if you set a password on your server</string>
<string name="authentication_section">Authentication</string>

</resources>
