<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:summaryOn="@string/hide_arrows_yes"
		android:summaryOff="@string/hide_arrows_no" android:title="@string/hide_arrows_title"
		android:key="@string/hide_arrows"></CheckBoxPreference>
	<EditTextPreference android:title="@string/host_title"
		android:key="@string/host_key" android:summary="@string/host_summary"></EditTextPreference>
	<EditTextPreference android:defaultValue="8800"
		android:title="@string/port_title" android:key="@string/port_key"
		android:summary="@string/port_summary"></EditTextPreference>

	<CheckBoxPreference android:key="@string/require_wifi_key"
		android:title="@string/require_wifi_title" android:summaryOn="@string/require_wifi_yes"
		android:summaryOff="@string/require_wifi_no" android:defaultValue="true"></CheckBoxPreference>

	<PreferenceCategory android:title="@string/authentication_section">
		<EditTextPreference android:key="@string/password_key" android:password="true"
			android:summary="@string/password_summary" android:title="@string/password_title"></EditTextPreference>
		<EditTextPreference android:key="@string/user_key"
			android:title="@string/user_title" android:defaultValue="xbox"
			android:summary="@string/user_summary"></EditTextPreference>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/advanced_title">
		<EditTextPreference android:title="@string/timeout_title"
			android:key="@string/timeout_key" android:summary="@string/timeout_summary"
			android:defaultValue="2000"></EditTextPreference>
		<EditTextPreference android:key="@string/discovered_name_key"
			android:title="@string/discovered_name" android:summary="@string/discovered_summary"></EditTextPreference>
	</PreferenceCategory>
</PreferenceScreen>